Added header and moved API key saving

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -81,3 +81,9 @@ textarea:focus, input:focus {
 .mt-4 a:hover {
     text-decoration: underline;
 }
+
+.telly-sun {
+    height: 40px;
+    width: auto;
+    margin-right: 10px;
+}
